# deafrica-waterbodies

./: .flake8  Dockerfile  Makefile  Waterbody_animation-Chilwa.ipynb  docker-compose.yml  index_tiles.sh  pyproject.toml  requirements.in  requirements.txt  setup.py
conda/: environment.yml
deafrica_waterbodies/: __init__.py  attributes.py  datasets.py  filters.py  io.py  make_polygons.py  make_time_series.py  make_timeseries.py  queues.py  tiling.py
deafrica_waterbodies.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deafrica_waterbodies/cli/: cli.py  continental_run.py  filter_waterbodies.py  from_bbox.py  from_vector_file.py  generate_timeseries.py  generate_waterbodies.py  generate_waterbodies_from_threshold.py  get_dataset_ids.py  group_options.py  io.py  log.py  logs.py  main.py  merge_at_ds_boundaries.py  merge_polygons_at_ds_boundaries.py  push_to_sqs_queue.py  run_from_sqs_queue.py  run_from_txt.py  write_final_output.py
deafrica_waterbodies/cmd/: cli.py  common.py  continental_run.py  from_bbox.py  from_vector_file.py
deafrica_waterbodies/s3/: queues.py
deafrica_waterbodies/waterbodies/polygons/: attributes.py  filter.py  filters.py  helpers.py  make_chunks.py  make_polygons.py  polygons.py
deafrica_waterbodies/waterbodies/timeseries/: id_field.py  io.py  make_time_series.py  make_timeseries.py
docker/: Dockerfile  index_tiles.sh  requirements.txt
notebooks/: 01_GetDatasetIDs.ipynb  02_GenerateFirstSetofPolygons.ipynb  02_GenerateFirstSetofPolygonsusingDatasetIDs.ipynb  02_GenerateFirstSetofPolygonsusingDatasetIDswithOceanFiltering.ipynb  02_GenerateFirstSetofPolygonswithOceanFiltering.ipynb  03_MergePolygonsAtTileBoundaries.ipynb  04_ApplyFilters.ipynb  05_WriteFinalWaterbodies.ipynb  1_123_GenerateWaterbodiesUsingTiles.ipynb  1_123_GenerateWaterbodiesUsingTileswithOCeanFiltering.ipynb  QuickPlotofWaterBodyTimeseries.ipynb  TurnWaterObservationsIntoWaterbodyPolygons.ipynb  Untitled.ipynb  UsingCommandLineTool.ipynb
tests/: test_make_chunks.py  test_make_polygons.py  test_make_time_series.py  test_queues.py
