[build-system]
requires = ["read_version ~= 0.3.0","setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deafrica-waterbodies"
description = "Digital Earth Africa Waterbodies"
authors = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
maintainers = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
readme = {file = "README.rst", content-type = "text/x-rst"}
# If you change the License, remember to change the Trove Classifier!
license = {file = "LICENSE"}
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: GIS',
    'Topic :: Scientific/Engineering :: Hydrology',
]
requires-python = ">=3.6.0"
dependencies = [
    'boto3',
    'boto3-stubs[sqs,s3]',
    'botocore',
    'click',
    'datacube',
    'deafrica-tools >= 2.1.3',
    'fsspec',
    'gdal',
    'geopandas',
    'numpy',
    'pandas',
    'python-dateutil',
    'python-geohash',
    'shapely',
    'tqdm',
    # Code style
    'black',
    'isort',
    'flake8',
    # Testing
    'pytest',
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/digitalearthafrica/deafrica-waterbodies"
Repository = "https://github.com/digitalearthafrica/deafrica-waterbodies"
Documentation = "https://github.com/digitalearthafrica/deafrica-waterbodies#readme"
"Bug Tracker" = "https://github.com/digitalearthafrica/deafrica-waterbodies/issues"

[project.scripts]
deafrica-waterbodies="deafrica_waterbodies.cli.main:main"

[tool.setuptools]
packages = ["deafrica_waterbodies"]

[tool.setuptools.dynamic]
version = {attr = "deafrica_waterbodies.__version__"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100

[tool.isort]
skip_gitignore = true
# Configure isort to be compatible with black.
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100